--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,6 +22,6 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: allure-result
-          path: allure-result/
+          name: allure-report
+          path: allure-report/
           retention-days: 30
