--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,8 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
+      - name: Generate Allure Report
+        run: npx allure generate --clean allure-results -o allure-report
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
