--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,11 @@ jobs:
         run: npx playwright test
       - name: Generate Allure Report
         run: npx allure generate --clean allure-results -o allure-report
+      - name: Deploy Allure report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: allure-report
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
