--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main, master]
 jobs:
-  test:
+  playwright_automation_pipeline:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
