--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,10 @@
 name: Playwright Tests
-on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
 jobs:
   playwright_automation_pipeline:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
+        run: node dist/compareImages.js
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -35,6 +31,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-playwright-
       - name: Run Playwright tests
+        env:
+          OPEN_AI_API: ${{ secrets.OPEN_AI_API }}
         run: npx playwright test
       - name: Generate Allure Report
         run: npx allure generate --clean allure-results -o allure-report
