--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,7 @@
 name: Playwright Tests
+on:
+  push:
+    branches: [main, master]
 jobs:
   playwright_automation_pipeline:
     timeout-minutes: 60
