--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,6 +2,8 @@ name: Playwright Tests
 on:
   push:
     branches: [main, master]
+  pull_request:
+    branches: [main, master]
 jobs:
   playwright_automation_pipeline:
     timeout-minutes: 60
