--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run Image Comparison Script
-        run: node dist/compareImages.js
+      - name: Run actions
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
