--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,6 +38,7 @@ jobs:
       - name: OPEN AI API
         env:
           OPEN_AI_API: ${{ secrets.OPEN_AI_API }}
+        run: utils/openai.spec.ts
       - name: Run Playwright tests
         run: npx playwright test
       - name: Generate Allure Report
