--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -45,19 +45,20 @@ jobs:
           OPEN_AI_API: ${{ secrets.OPEN_AI_API }}
         run: npx playwright test
 
-      - name: Copy history
+     - name: Copy History
         run: |
           mkdir -p build/allure-results/history
           cp -r gh-pages/history build/allure-results/ || true
 
-      - name: Generate Allure Report
-        run: npx allure generate --clean allure-results -o allure-report
+      - name: Generate Allure report
+        run: |
+          allure generate build/allure-results --clean -o build/allure-report
 
-      - name: Save new history
+      - name: Copy new history back to gh-pages
         run: |
           mkdir -p gh-pages
-          cp -r build/allure-report/history gh-pages/
-
+          cp -r build/allure-report/history gh-pages/ || true
+          
       - name: Deploy Allure report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
