--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.9.1",
     "allure-commandline": "^2.34.1",
-    "allure-playwright": "^3.4.1"
+    "allure-playwright": "^3.4.1",
+    "dotenv": "^17.3.1"
   }
 }
