--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.3.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.9.1",
     "allure-commandline": "^2.34.1",
