--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "@types/node": "^24.9.1",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.1"
+  },
+  "dependencies": {
+    "@google/genai": "^1.43.0",
+    "dotenv": "^17.3.1",
+    "form-data": "^4.0.5",
+    "node-fetch": "^3.3.2"
   }
 }
